@@ -1,3 +1,8 @@
+2010-11-25  Akira TAGOH  <tagoh@redhat.com>
+
+	* src/ui/im-chooser-simple.c (_im_chooser_simple_update_im_list):
+	Move none at the beginning of the list.
+
 2010-11-15  Akira TAGOH  <tagoh@redhat.com>
 
 	* src/im-chooser-simple.c: get rid of the applet support.
